[package]
name = "redis-rust"
version = "0.1.0"
authors = ["Aashish Upadhyay <boysmall300@gmail.com>"]
edition = "2021"


[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1", features = ["full"] } # async networking
